--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ opencv-python==4.9.0.80
 pillow==10.3.0
 PyWavelets==1.6.0
 requests==2.31.0
+scenedetect==0.6.3
 scikit-learn==1.4.2
 scipy==1.13.0
 threadpoolctl==3.5.0
